[tool.poetry]
name = "todoist-backup-data"
version = "0.1.0"
description = ""
authors = ["Shi Han NG <shihanng@gmail.com>"]
readme = "README.md"
packages = [{include = "todoist_backup_data"}]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
